--- a/CJ  -  Parent/pom.xml
+++ b/CJ  -  Parent/pom.xml
@@ -11,6 +11,7 @@
 	<description>Parent of all my projects</description>
 	
 	<properties>
+        <!-- Java-Version -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
